# aoc2025

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs
