# Cargo.toml

[package]
name = "aoc2025"
version = "12.8.2"
authors = ["Sami J. Mäkinen <sjm@iki.fi>"]
description = "Advent of Code 2025"
repository = "https://github.com/sjm42/aoc2025"
readme = "README.md"
keywords = ["AOC"]
license = "MIT"
edition = "2024"
resolver = "2"


[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
# chrono = "0"
# colored = "3"
# itertools = "0"
# regex = "1"
# serde = { version = "1", features = ["derive"] }
# serde_json = "1"
shellexpand = { version = "3", features = ["full"] }
tracing = { version = "0", features = ["log"] }
tracing-subscriber = "0"


[build-dependencies]
anyhow = "1"
build-data = "0"


[profile.release]
opt-level = 3
lto = "fat"


[profile.minsize]
inherits = "release"
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"

# EOF
